--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
 }
 
 .right{
-    width:75vw;
+    width:72vw;
     right: 0;
     order: 2;
     height:200vh;
@@ -38,6 +38,7 @@ body{
     margin-top: 1vw;
     border-radius: 5px;
     background-color: #121212;
+    padding:1vw 2vw;
     /* margin: 1vw;/ */
  
 }
@@ -58,12 +59,13 @@ body{
 }
 .home > img{
     margin-left: 1vw;
-    width:15vw;
-    height:10vh;
+    width:10vw;
+    height:7vh;
+    margin-bottom: 2vh;
 }
 .home ul img{
-    width:2.5vw;
-    height:5vh;
+    width:2vw;
+    height:4vh;
 }
 .home ul li{
     list-style: none;
@@ -73,7 +75,7 @@ body{
     /* font-weight: bolder; */
     display: flex;
     align-items: center;
-    font-size: 1.7vw;
+    font-size: 1.5vw;
     gap:1.5vw;
  
 }
@@ -86,51 +88,44 @@ body{
 }
 .library span{
     display: flex;
-    gap:1.5vw;
+    gap:.5vw;
     align-items: center;
-    justify-content: center;
-    font-size: 2vw;
+    /* justify-content: center; */
+    font-size: 1.5vw;
     height:10vh;
     /* margin-top: 3vw; */
 }
-.library span img{
-    width:4vw;
-    height:8vh
+.library span >img{
+    width:3.5vw;
+    height:7vh
 }
 .lib-cont{
-    position: relative;
-    height:1000vh;
-    width: 90%;
+    /* position: relative; */
+    /* height:1000vh; */
+    width: 95%;
     margin:1vw;
-    /* overflow-y: auto; */
-    /* display: flex;
-    flex-direction: column; */
-    /* background-color: bisque; */
-    /* display: flex;
-    flex-direction: column;
-    overflow: scroll;
-    gap:1vw; */
-    /* display: grid;
-    /* grid-template-columns: 1fr;
-    grid-template-rows: 25vh;
-    grid-auto-flow: column; */ 
-    /* gap:1vw; */
-
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 25vh ;
-    grid-auto-flow: column;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto ;
+    grid-auto-flow: row;
+    grid-gap:1vw;
+    overflow: scroll;
+    background-color: black;
 }
  .lib-box{
-    background-color: rgb(56, 55, 55);
-    margin-bottom: 1vw;
-    border: 2px pink solid;
-    position: absolute;
+    margin: 0.5vw;
+    background-color: rgb(44, 43, 43);
+    /* margin-bottom: 0.5vw; */
+    padding:1vh 1vw;
+    /* border: 2px pink solid; */
+    /* position: absolute; */
     width: 100%;
+    border-radius:3px;
+
 
     /* top:-1000px; */
     
-    /* height:25vh; */
+    height:25vh;
 
 
     
@@ -141,5 +136,28 @@ body{
 }
 .podcasts{
     /* background-color: blue; */
-    top:25px;
+    
+}
+.lib-sym{
+    
+    width:6.5vw;
+    margin-left: 4vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.plus{
+    width:3vw;
+    height: 6vh;
+}
+.arrow{
+    width:2vw;
+    height: 5vh;
+    /* padding:0.2vw; */
+}
+.right-l1{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
